--- a/melo.html
+++ b/melo.html
@@ -52,7 +52,7 @@
         <p><img src="images/largemelo.png" alt="large melo pic"></p>
         </div>
 
-        <p><a href="https://mroble.github.io/melotheumangboy">Play Unity Game</a> | <a href="some link">Play Phaser Game</a> | <a href="https://github.com/mroble/melocode">Source Code on GitHub</a></p>
+        <p><a href="https://mroble.github.io/melotheumangboy">Play Unity Game</a> | <a href="https://mroble.github.io/melophaser">Play Phaser Game</a> | <a href="https://github.com/mroble/melocode">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
 <p>
