--- a/melophaser.html
+++ b/melophaser.html
@@ -1,4 +1,4 @@
- <title>Melo The Umang Boy Video Game</title>
+ <title>Melo The Umang Boy Phaser Edition</title>
     <!-- Get jQuery -->
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
@@ -31,7 +31,7 @@
 
     </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="main.css" rel="stylesheet"/>
+       <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
 
@@ -52,22 +52,18 @@
         <p><img src="images/largemelo.png" alt="large melo pic"></p>
         </div>
 
-        <p><a href="https://mroble.github.io/kalipay">Play Game</a> | <a href="https://github.com/mroble/kalipay">Source Code on GitHub</a></p>
+        <p><a href="some link">Play Phaser Game</a> | <a href="some link">Source Code on GitHub</a></p>
 
 <h5>Description</h5>
 <p>
-    <i>Kalipay And The Tiniest Tiktik</i> is a Flappy Birds-style sidescrolling video game.  It is the second collaboration with the publishing company, <a href="http://www.sarisaristorybooks.com">Sari-Sari Storybooks</a>.  Sari-Sari Storybooks is a children's book company which aims to preserve cultural and linguistic diversity in the Philippines through publishing children's books in lesser-represented languages of the archipelago. Just like <a href="melo.html">Melo</a>, the aim of this game is to reinforce vocabulary taught in the books in a fun and engaging way.
-
-    This game holds a special place in my heart, as it's the first Phaser game I have ever made. It was made with the help of William Clarkson's <a href="http://www.udemy.com/building-games-with-phaser">Building Games with Phaser</a> on Udemy.
-
-    (Please excuse the rough state of the graphics and audio. I'm currently waiting for game assets to come down the pipeline!)
+    Like its ancestor, <i>Melo The Umang Boy- Phaser Edition</i> is a 2D platformer video game collaboration with the publishing company, <a href="http://www.sarisaristorybooks.com">Sari-Sari Storybooks</a>. However, after working on the original Unity version, I decided that I wanted to try to make the game mobile-friendly. The functionality is largely the same as the original, only this version was developed using the <a href="https://phaser.io">Phaser.js</a> library.
 </p>
 
 <h5>Technologies Used</h5>
-<p>HTML5, Phaser, Javascript, AffinityPhoto (graphics editing), GitHub</p>
+<p>HTML5, JavaScript, Phaser.js, Affinity Photo (graphics editing), Tiled Tilemap Editor, GitHub</p>
 
 <h5>Date Made</h5>
-<p>In-Progress</p>
+<p>Development Ongoing</p>
 
 
 
