--- a/thingsimade.html
+++ b/thingsimade.html
@@ -98,7 +98,7 @@
 
         <div class = "row">
           <div class = "col-sm-6 col-md-3">
-            <a href = "ballmouse.html" class = "ball mouse thumbnail">
+            <a href = "ballmouse.html" class = "thumbnail">
               <img src="images/niceballmousesmall.png" alt = "ballmouse game thumbnail">
             </a>
           </div>
