--- a/thingsimade.html
+++ b/thingsimade.html
@@ -77,7 +77,7 @@
 
           <div class = "col-sm-6 col-md-3">
             <a href = "kalipay.html" class = "thumbnail">
-              <img src="images/#" alt = "Kalipay thumbnail">
+              <img src="images/kalipaythumb.png" alt = "Kalipay thumbnail">
             </a>
           </div>
 
