--- a/kalipay.html
+++ b/kalipay.html
@@ -1,4 +1,4 @@
- <title>Melo The Umang Boy Video Game</title>
+ <title>Kalipay And The Tiniest Tiktik</title>
     <!-- Get jQuery -->
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
@@ -42,7 +42,7 @@
 
 <div class="type-wrap">
             <div id="typed-strings">
-                <span>Melo The Umang Boy</span>
+                <span>Kalipay And The Tiniest Tiktik</span>
                 <p>A Collaboration With Sari-Sari Storybooks</p>
             </div>
             <span id="typed" style="white-space:pre;"></span>
@@ -58,7 +58,7 @@
 <p>
     <i>Kalipay And The Tiniest Tiktik</i> is a Flappy Birds-style sidescrolling video game.  It is the second collaboration with the publishing company, <a href="http://www.sarisaristorybooks.com">Sari-Sari Storybooks</a>.  Sari-Sari Storybooks is a children's book company which aims to preserve cultural and linguistic diversity in the Philippines through publishing children's books in lesser-represented languages of the archipelago. Just like <a href="melo.html">Melo</a>, the aim of this game is to reinforce vocabulary taught in the books in a fun and engaging way.
 
-    This game holds a special place in my heart, as it's the first Phaser game I have ever made. It was made with the help of William Clarkson's <a href="http://www.udemy.com/building-games-with-phaser">Building Games with Phaser</a> on Udemy.
+    This game holds a special place in my heart for two reasons. It's the first Phaser game I have ever made. It was made with much help from William Clarkson's <a href="http://www.udemy.com/building-games-with-phaser">Building Games with Phaser</a> on Udemy. The second reason is, one of the main characters from <i>Kalipay</i>, Gamay, is a vegetarian <i>aswang</i>, or Filipino vampire. Bringing a creature from Filipino foklore to life remains one of the most thrilling things I have done in my game-making career!
 
     (Please excuse the rough state of the graphics and audio. I'm currently waiting for game assets to come down the pipeline!)
 </p>
