--- a/kalipay.html
+++ b/kalipay.html
@@ -56,10 +56,11 @@
 
 <h5>Description</h5>
 <p>
-    <i>Kalipay And The Tiniest Tiktik</i> is a Flappy Birds-style sidescrolling video game.  It is the second collaboration with the publishing company, <a href="http://www.sarisaristorybooks.com">Sari-Sari Storybooks</a>.  Sari-Sari Storybooks is a children's book company which aims to preserve cultural and linguistic diversity in the Philippines through publishing children's books in lesser-represented languages of the archipelago. Just like <a href="melo.html">Melo</a>, the aim of this game is to reinforce vocabulary taught in the books in a fun and engaging way.
-
+    <i>Kalipay And The Tiniest Tiktik</i> is a Flappy Birds-style sidescrolling video game.  It is the second collaboration with the publishing company, <a href="http://www.sarisaristorybooks.com">Sari-Sari Storybooks</a>.  Sari-Sari Storybooks is a children's book company which aims to preserve cultural and linguistic diversity in the Philippines through publishing children's books in lesser-represented languages of the archipelago. Just like <a href="melo.html">Melo</a>, the aim of this game is to reinforce vocabulary taught in the books in a fun and engaging way.</p>
+<p>
     This game holds a special place in my heart for two reasons. It's the first Phaser game I have ever made. It was made with much help from William Clarkson's <a href="http://www.udemy.com/building-games-with-phaser">Building Games with Phaser</a> on Udemy. The second reason is, one of the main characters from <i>Kalipay</i>, Gamay, is a vegetarian <i>aswang</i>, or Filipino vampire. Bringing a creature from Filipino foklore to life remains one of the most thrilling things I have done in my game-making career!
-
+</p>
+<p>
     (Please excuse the rough state of the graphics and audio. I'm currently waiting for game assets to come down the pipeline!)
 </p>
 
