--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <link href="main.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-    
+
 </head>
 <body>
 
@@ -52,7 +52,7 @@
 
         <div class="type-wrap">
             <div id="typed-strings">
-                <span>Hi! My name's Maureen!</span> 
+                <span>Hi! My name's Maureen!</span>
                 <p>I make games.</p>
                 <p>So you don't have to.</p>
                 <p>Enjoy your stay!</p>
@@ -63,8 +63,7 @@
         </div>
 
         <div class="links">
-            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a>  |   
-            <a href="http://www.twitter.com/MaureenRoble">Twitter</a> | <a href="sayhello.html">E-mail</a> 
+            <a href="thingsimade.html">Things I Made</a>  |  <a href="images/mrobleresume.pdf">Download Resume</a>  |  <a href="http://www.github.com/mroble">GitHub</a> | <a href="sayhello.html">E-mail</a>
         </div>
     </div>
 
